Some of my closed PRs (#172)
* update

* fix

* make duplicateModuleNames default False