@@ -1,13 +1,9 @@
 package anticope.rejects.utils;
 
-import meteordevelopment.meteorclient.settings.EnumSetting;
-import meteordevelopment.meteorclient.settings.ModuleListSetting;
-import meteordevelopment.meteorclient.settings.Setting;
-import meteordevelopment.meteorclient.settings.SettingGroup;
+import meteordevelopment.meteorclient.settings.*;
 import meteordevelopment.meteorclient.systems.config.Config;
 import meteordevelopment.meteorclient.systems.modules.Module;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ConfigModifier {
@@ -27,9 +23,27 @@ public class ConfigModifier {
     public final Setting<List<Module>> hiddenModules = sgRejects.add(new ModuleListSetting.Builder()
             .name("hidden-modules")
             .description("Which modules to hide.")
-            .defaultValue(Arrays.asList())
+            .defaultValue(List.of())
             .defaultValue(RejectsConfig.get().getHiddenModules())
             .onChanged(v -> RejectsConfig.get().setHiddenModules(v))
+            .build()
+    );
+
+    public final Setting<Boolean> loadSystemFonts = sgRejects.add(new BoolSetting.Builder()
+            .name("load-system-fonts")
+            .description("Disabling this for faster launch. You can put font into meteor-client/fonts folder. Restart to take effect.")
+            .defaultValue(true)
+            .defaultValue(RejectsConfig.get().loadSystemFonts)
+            .onChanged(v -> RejectsConfig.get().loadSystemFonts = v)
+            .build()
+    );
+
+    public final Setting<Boolean> duplicateModuleNames = sgRejects.add(new BoolSetting.Builder()
+            .name("duplicate-module-names")
+            .description("Allow duplicate module names. Best for addon compatibility.")
+            .defaultValue(false)
+            .defaultValue(RejectsConfig.get().duplicateModuleNames)
+            .onChanged(v -> RejectsConfig.get().duplicateModuleNames = v)
             .build()
     );
 
